# wrap-project-python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TUTORIAL.md  wrap_example.h  wrap_example.i
example/: CMakeLists.txt  wrap_example.h
example/python/: CMakeLists.txt  pybind_wrapper.tpl  setup.py.in
example/python/wrap_example_py/: __init__.py
example/src/: greeting.cpp  greeting.h
python/: CMakeLists.txt  pybind_wrapper.tpl
python/wrap_example_py/tests/: test_Example.py
src/: greeting.cpp  greeting.h
